--- a/app/assets/stylesheets/tools/_bootstrap_tweaks.scss
+++ b/app/assets/stylesheets/tools/_bootstrap_tweaks.scss
@@ -27,6 +27,9 @@
 			background-position: center right 0.5625rem;
 			background-size: 1.125rem 1.125rem;
 		}
+		select {
+			@extend .is-invalid;
+		}
 	}
 }
 label {
@@ -34,6 +37,7 @@ label {
 }
 .alert {
 	font-size: 1rem;
+	margin: 0;
 
 	p {
 		margin: 0;
