--- a/app/views/users/passwords/edit.html.slim
+++ b/app/views/users/passwords/edit.html.slim
@@ -12,4 +12,4 @@
 					= f.input :password_confirmation, label: t('.labels.password_confirmation'), required: true
 					= f.button :submit, t('.submit')
 			.card-footer
-				= render 'professors/shared/links'
+				= render 'users/shared/links'
