--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -394,26 +394,26 @@ $form-feedback-invalid-color:       theme-color(danger);
 //
 // Dropdown menu container and contents.
 
-$dropdown-min-width:                10rem;
+$dropdown-min-width:                12rem;
 $dropdown-padding-y:                .5rem;
 $dropdown-spacer:                   .125rem;
-$dropdown-bg:                       color(white);
+$dropdown-bg:                       theme-color(primary);
 $dropdown-border-color:             rgba(color(black),.15);
 $dropdown-border-width:             $border-width;
 $dropdown-divider-bg:               gray(200);
-$dropdown-box-shadow:               0 .5rem 1rem rgba(color(black),.175);
+$dropdown-box-shadow:               none;
 
-$dropdown-link-color:               gray(900);
-$dropdown-link-hover-color:         darken(gray(900), 5%);
-$dropdown-link-hover-bg:            gray(100);
+$dropdown-link-color:               rgba(color(white),.5);
+$dropdown-link-hover-color:         color(white);
+$dropdown-link-hover-bg:            none;
 
-$dropdown-link-active-color:        $component-active-color;
-$dropdown-link-active-bg:           $component-active-bg;
+$dropdown-link-active-color:        color(white);
+$dropdown-link-active-bg:           none;
 
 $dropdown-link-disabled-color:      gray(600);
 
-$dropdown-item-padding-y:           .25rem;
-$dropdown-item-padding-x:           1.5rem;
+$dropdown-item-padding-y:           .5rem;
+$dropdown-item-padding-x:           1rem;
 
 $dropdown-header-color:             gray(600);
 
