--- a/app/views/units/index.html.slim
+++ b/app/views/units/index.html.slim
@@ -1,3 +1,3 @@
-= header_generator(@units, 'gears')
+= header_generator(Unit, 'gears')
 .row-wg
 	= admin_table_generator @units, :id, :component, :lubricant, :actions
