--- a/app/views/users/mailer/password_change.html.slim
+++ b/app/views/users/mailer/password_change.html.slim
@@ -7,7 +7,7 @@
 			hr
 
 			.section
-				h3 = t '.greetings', name: @resource.display_short_name
+				h3 = t '.greetings', name: @resource.short_name
 
 				p = t '.instruction', email: @email
 
