--- a/app/views/users/unlocks/new.html.slim
+++ b/app/views/users/unlocks/new.html.slim
@@ -10,4 +10,4 @@
 					= f.input :email
 					= f.button :submit, t('.submit')
 			.card-footer
-				= render 'professors/shared/links'
+				= render 'users/shared/links'
