--- a/app/views/components/edit.html.slim
+++ b/app/views/components/edit.html.slim
@@ -1,8 +1,2 @@
-h1 Editing component
-
+= header_generator @component, 'edit'
 == render 'form'
-
-=> link_to 'Show', @component
-'|
-=< link_to 'Back', components_path
-
