--- a/app/views/gear_types/edit.html.slim
+++ b/app/views/gear_types/edit.html.slim
@@ -1,8 +1,2 @@
-h1 Editing gear_type
-
+= header_generator @gear_type, 'edit'
 == render 'form'
-
-=> link_to 'Show', @gear_type
-'|
-=< link_to 'Back', gear_types_path
-
