--- a/app/views/gears/edit.html.slim
+++ b/app/views/gears/edit.html.slim
@@ -1,8 +1,2 @@
-h1 Editing gear
-
+= header_generator @gear, 'edit'
 == render 'form'
-
-=> link_to 'Show', @gear
-'|
-=< link_to 'Back', gears_path
-
