--- a/app/views/gear_types/show.html.slim
+++ b/app/views/gear_types/show.html.slim
@@ -1,9 +1,2 @@
-p#notice = notice
-
-p
-  strong Name:
-  = @gear_type.name
-
-=> link_to 'Edit', edit_gear_type_path(@gear_type)
-'|
-=< link_to 'Back', gear_types_path
+= header_generator @gear_type, 'gears'
+= dbox_generator @gear_type
