--- a/app/views/gears/index.html.slim
+++ b/app/views/gears/index.html.slim
@@ -1,23 +1,3 @@
-h1 Listing gears
-
-table
-  thead
-    tr
-      th Name
-      th Type
-      th
-      th
-      th
-
-  tbody
-    - @gears.each do |gear|
-      tr
-        td = gear.name
-        td = gear.type
-        td = link_to 'Show', gear
-        td = link_to 'Edit', edit_gear_path(gear)
-        td = link_to 'Destroy', gear, data: { confirm: 'Are you sure?' }, method: :delete
-
-br
-
-= link_to 'New Gear', new_gear_path
+= header_generator Gear, 'gear'
+.row-wg
+	= table_generator @gears, :actions
