--- a/app/views/units/edit.html.slim
+++ b/app/views/units/edit.html.slim
@@ -1,8 +1,2 @@
-h1 Editing unit
-
+= header_generator @unit, 'edit'
 == render 'form'
-
-=> link_to 'Show', @unit
-'|
-=< link_to 'Back', units_path
-
