--- a/app/views/units/index.html.slim
+++ b/app/views/units/index.html.slim
@@ -1,3 +1,3 @@
-= header_generator(Unit, 'gears')
+= header_generator Unit, 'gear'
 .row-wg
-	= admin_table_generator @units, :id, :component, :lubricant, :actions
+	= table_generator @units, :actions
