master-V7 PT2 Hito3
Versión final para hito 3 y examen final

--- a/app/views/samples/new.html.slim
+++ b/app/views/samples/new.html.slim
@@ -1,4 +1,4 @@
-= header_generator @sample, 'plus'
+= header_generator @sample, 'plus', 'Subir Muestra'
 .row-wg.justify-content-center
 	.col-md-8
 		.card.border-primary
